# serializer version: 1
# name: test_from_imdb_id_snapshots[Superman.2025.2160p.MA.WEB-DL.DDP5.1.Atmos.H.265.HUN-FULCRUM-details0]
  dict({
    'attributes': list([
      dict({
        'description': None,
        'id': 'hun',
        'is_preferable': True,
        'name': 'magyar',
        'order': 0,
        'pattern': '\\b(hun(?:[-_. ]?dub)?|magyar|hungarian)\\b',
        'preference_id': 'language',
        'short_name': 'Hun',
        'show_in_details': True,
      }),
      dict({
        'description': None,
        'id': 'x265',
        'is_preferable': True,
        'name': 'x265 (HEVC)',
        'order': 0,
        'pattern': '\\b(x265|h\\.?265|hevc)\\b',
        'preference_id': 'video-codec',
        'short_name': 'x265',
        'show_in_details': True,
      }),
      dict({
        'description': None,
        'id': 'eac3',
        'is_preferable': True,
        'name': 'Dolby Digital Plus',
        'order': 0,
        'pattern': '\\b(ddp(?:2\\.0|5\\.1|7\\.1)?|dd\\+(?:2\\.0|5\\.1|7\\.1)?|e[-_. ]?ac[-_. ]?3)\\b',
        'preference_id': 'audio-quality',
        'short_name': None,
        'show_in_details': True,
      }),
      dict({
        'description': None,
        'id': 'dolby-atmos',
        'is_preferable': True,
        'name': 'Dolby Atmos',
        'order': 0,
        'pattern': '\\b(atmos)\\b',
        'preference_id': 'audio-spatial',
        'short_name': None,
        'show_in_details': True,
      }),
      dict({
        'description': None,
        'id': '5.1',
        'is_preferable': True,
        'name': '5.1 (Térhangzás)',
        'order': 0,
        'pattern': '(5\\.1|6ch)',
        'preference_id': 'audio-channels',
        'short_name': '5.1',
        'show_in_details': True,
      }),
      dict({
        'description': None,
        'id': '2160p',
        'is_preferable': True,
        'name': 'UHD (4K)',
        'order': 0,
        'pattern': '(2160p|4k[-_. ](?:UHD|HEVC|BD)|(?:UHD|HEVC|BD)[-_. ]4k|\\b(4k)\\b|COMPLETE.UHD|UHD.COMPLETE)',
        'preference_id': 'resolution',
        'short_name': None,
        'show_in_details': True,
      }),
      dict({
        'description': None,
        'id': 'sdr',
        'is_preferable': True,
        'name': 'SDR',
        'order': 0,
        'pattern': None,
        'preference_id': 'video-quality',
        'short_name': None,
        'show_in_details': False,
      }),
      dict({
        'description': None,
        'id': 'web-dl',
        'is_preferable': True,
        'name': 'Web-DL',
        'order': 0,
        'pattern': '\\b(web[-_. ]?dl|web(?![-_. ]?rip))\\b',
        'preference_id': 'source',
        'short_name': None,
        'show_in_details': True,
      }),
      dict({
        'description': None,
        'id': 'theatrical',
        'is_preferable': True,
        'name': 'Moziváltozat (Theatrical)',
        'order': 0,
        'pattern': None,
        'preference_id': 'edition',
        'short_name': 'Theatrical',
        'show_in_details': False,
      }),
      dict({
        'details_path': '/details',
        'disabled': False,
        'id': 'test_indexer',
        'name': 'Test Indexer',
        'order': 0,
        'preference_id': None,
        'requires_full_download': False,
        'url': 'http://test_indexer',
      }),
    ]),
    'file_index': 0,
    'file_name': 'fulcrum-superman.2025.2160p.web.ma.mkv',
    'file_size': 25168000000,
    'indexer_account': dict({
      'cookies': None,
      'created_at': datetime.datetime(2026, 6, 9, 17, 39, 59, 552543),
      'download_full_torrent': False,
      'hit_and_run': None,
      'indexer_id': 'test_indexer',
      'keep_seed_seconds': None,
      'password': 'test_password',
      'updated_at': datetime.datetime(2026, 6, 9, 17, 39, 59, 552543),
      'username': 'test_user',
    }),
    'info_hash': 'abcdef123456',
    'is_persisted_torrent': False,
    'play_url': 'http://test/api/test-api-key/stream/mocked-token',
    'seeders': 150,
    'torrent_id': 'test_torrent_id',
    'torrent_name': 'Superman.2025.2160p.MA.WEB-DL.DDP5.1.Atmos.H.265.HUN-FULCRUM',
  })
# ---
# name: test_from_imdb_id_snapshots[The.Boondocks.S02.HUN.DVDRip.XviD-HSF-details1]
  dict({
    'attributes': list([
      dict({
        'description': None,
        'id': 'hun',
        'is_preferable': True,
        'name': 'magyar',
        'order': 0,
        'pattern': '\\b(hun(?:[-_. ]?dub)?|magyar|hungarian)\\b',
        'preference_id': 'language',
        'short_name': 'Hun',
        'show_in_details': True,
      }),
      dict({
        'description': None,
        'id': 'dvd-rip',
        'is_preferable': True,
        'name': 'DVD Rip',
        'order': 0,
        'pattern': '\\b(dvdrip)\\b',
        'preference_id': 'source',
        'short_name': 'DVDRip',
        'show_in_details': True,
      }),
      dict({
        'description': None,
        'id': 'sdr',
        'is_preferable': True,
        'name': 'SDR',
        'order': 0,
        'pattern': None,
        'preference_id': 'video-quality',
        'short_name': None,
        'show_in_details': False,
      }),
      dict({
        'description': None,
        'id': 'theatrical',
        'is_preferable': True,
        'name': 'Moziváltozat (Theatrical)',
        'order': 0,
        'pattern': None,
        'preference_id': 'edition',
        'short_name': 'Theatrical',
        'show_in_details': False,
      }),
      dict({
        'details_path': '/details',
        'disabled': False,
        'id': 'test_indexer',
        'name': 'Test Indexer',
        'order': 0,
        'preference_id': None,
        'requires_full_download': False,
        'url': 'http://test_indexer',
      }),
    ]),
    'file_index': 1,
    'file_name': 'hsf-bndcks-202.avi',
    'file_size': 186245000,
    'indexer_account': dict({
      'cookies': None,
      'created_at': datetime.datetime(2026, 6, 9, 17, 39, 59, 552543),
      'download_full_torrent': False,
      'hit_and_run': None,
      'indexer_id': 'test_indexer',
      'keep_seed_seconds': None,
      'password': 'test_password',
      'updated_at': datetime.datetime(2026, 6, 9, 17, 39, 59, 552543),
      'username': 'test_user',
    }),
    'info_hash': 'abcdef123456',
    'is_persisted_torrent': False,
    'play_url': 'http://test/api/test-api-key/stream/mocked-token',
    'seeders': 150,
    'torrent_id': 'test_torrent_id',
    'torrent_name': 'The.Boondocks.S02.HUN.DVDRip.XviD-HSF',
  })
# ---
